correct hw 7
